--- a/rootdir/etc/init.mt6893.power.rc
+++ b/rootdir/etc/init.mt6893.power.rc
@@ -1,6 +1,6 @@
 on property:init.svc.vendor.charger=running
     # Enable UFS powersaving
-    write /sys/devices/platform/bootdevice/clkgate_enable 1
+    write /sys/devices/platform/11270000.ufshci/clkgate_enable 1
 
     # Keep one LITTLE and one big
     write /sys/devices/system/cpu/cpu1/online 0
@@ -54,7 +54,13 @@ on init
     chmod 0666 /dev/stune/io/tasks
 
     # Disable UFS powersaving
-    write /sys/devices/platform/bootdevice/clkgate_enable 0
+    write /sys/devices/platform/11270000.ufshci/clkgate_enable 0
+
+    # Boot time FS tuning
+    write /sys/block/mmcblk0/queue/iostats 0
+    write /sys/block/mmcblk0/queue/nr_requests 256
+    write /sys/block/sdc/queue/iostats 0
+    write /sys/block/sdc/queue/nr_requests 256
 
     # Configure governor settings for little cluster
     write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor "schedutil"
@@ -67,10 +73,10 @@ on init
     write /sys/devices/system/cpu/cpufreq/policy6/schedutil/down_rate_limit_us 20000
 
     # update cpus for cpuset cgroup
-    write /dev/cpuset/foreground/cpus 0-7
+    write /dev/cpuset/foreground/cpus 0-2,4-7
     write /dev/cpuset/foreground/boost/cpus 0-7
-    write /dev/cpuset/background/cpus 0-3
-    write /dev/cpuset/system-background/cpus 0-5
+    write /dev/cpuset/background/cpus 0-2
+    write /dev/cpuset/system-background/cpus 0-3
     write /dev/cpuset/top-app/cpus 0-7
 
     # Set default SchedTune values
@@ -80,18 +86,26 @@ on init
     write /dev/stune/top-app/schedtune.boost 1
 
 on enable-low-power
-    # Back to default VM settings
-    write /proc/sys/vm/dirty_expire_centisecs 3000
-    write /proc/sys/vm/dirty_background_ratio 10
-
     # Enable UFS powersaving
-    write /sys/devices/platform/bootdevice/clkgate_enable 1
+    write /sys/devices/platform/11270000.ufshci/clkgate_enable 1
+
+    # Runtime FS tuning
+    # we should adjust the setting upon boot_complete for runtime performance
+    write /sys/block/mmcblk0/queue/iostats 1
+    write /sys/block/mmcblk0/queue/read_ahead_kb 512
+    write /sys/block/mmcblk0/queue/nr_requests 128
+    write /sys/block/sdc/queue/iostats 1
+    write /sys/block/sdc/queue/read_ahead_kb 512
+    write /sys/block/sdc/queue/nr_requests 128
+    write /sys/block/dm-0/queue/read_ahead_kb 128
+    write /sys/block/dm-1/queue/read_ahead_kb 128
+    write /sys/block/dm-2/queue/read_ahead_kb 128
+    write /sys/block/dm-3/queue/read_ahead_kb 128
+    write /sys/block/dm-4/queue/read_ahead_kb 128
+    write /sys/block/dm-5/queue/read_ahead_kb 128
 
     write /proc/cpufreq/cpufreq_sched_disable 0
     write /proc/sys/kernel/sched_migration_cost_ns 200000
-
-    # Enable PowerHAL hint processing
-    setprop vendor.powerhal.init 1
 
 on property:sys.boot_completed=1
     trigger enable-low-power
