--- a/rootdir/etc/init.mt6893.power.rc
+++ b/rootdir/etc/init.mt6893.power.rc
@@ -79,11 +79,19 @@ on init
     write /dev/cpuset/system-background/cpus 0-3
     write /dev/cpuset/top-app/cpus 0-7
 
-    # Set default SchedTune values
-    write /dev/stune/foreground/schedtune.prefer_idle 0
+    # Set SchedTune values
+    write /dev/stune/background/schedtune.boost 0
+    write /dev/stune/foreground/schedtune.boost 30
+    write /dev/stune/top-app/schedtune.boost 50
+    write /dev/stune/schedtune.boost 20
     write /dev/stune/top-app/schedtune.prefer_idle 0
+    write /dev/stune/background/schedtune.prefer_idle 0
+    write /dev/stune/foreground/schedtune.prefer_idle 0
+    write /dev/stune/schedtune.prefer_idle 0
+    write /dev/stune/rt/schedtune.boost 25
     write /dev/stune/rt/schedtune.prefer_idle 0
-    write /dev/stune/top-app/schedtune.boost 1
+    write /dev/stune/io/schedtune.boost 10
+    write /dev/stune/io/schedtune.preferidle 0
 
 on enable-low-power
     # Enable UFS powersaving
