[SQAUSH] amber: Switch to XiaomiDolby
* Implementation from https://github.com/AOSPA/android_device_xiaomi_xiaomi13/tree/uvite/dolby.

Co-authored-by: Fabian Leutenegger <fabian.leutenegger@bluewin.ch>
Change-Id: I2c821958c7fd3a0e21c6724e3c7d983c748a8a35
Signed-off-by: ziadtamer11 <ziadtamer150@gmail.com>

--- a/XiaomiDolby/AndroidManifest.xml
+++ b/XiaomiDolby/AndroidManifest.xml
@@ -5,7 +5,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.aospa.settings.dolby"
+    package="com.xiaomi.dolby"
     android:versionCode="1"
     android:versionName="1.0"
     android:sharedUserId="android.uid.system">
@@ -50,8 +50,8 @@
                        android:value="content://org.lineageos.settings.device.summary/dolby" />
         </activity>
 
-	<provider
-            android:name=".SummaryProvider"
+        <provider
+            android:name=".DolbySummaryProvider"
             android:authorities="org.lineageos.settings.device.summary">
         </provider>
 
